# open-data-product-berlin-lor-population-source-aligned

./: README.md  data-product-manifest.yml  data-product.yml  data-transformation-02-silver.yml  data-transformation-03-gold.yml  dpds.yml  main.ipynb  main.py  odps.yml  pyproject.toml  requirements.txt
data/02-silver/berlin-lor-population-2015-01/: berlin-lor-population-2015-01-t1.csv  berlin-lor-population-2015-01-t2.csv  berlin-lor-population-2015-01-t3.csv  berlin-lor-population-2015-01-t4.csv
data/02-silver/berlin-lor-population-2015-02/: berlin-lor-population-2015-02-t1.csv  berlin-lor-population-2015-02-t2.csv  berlin-lor-population-2015-02-t3.csv  berlin-lor-population-2015-02-t4.csv
data/02-silver/berlin-lor-population-2016-01/: berlin-lor-population-2016-01-t1.csv  berlin-lor-population-2016-01-t2.csv  berlin-lor-population-2016-01-t3.csv  berlin-lor-population-2016-01-t4.csv
data/02-silver/berlin-lor-population-2016-02/: berlin-lor-population-2016-02-t1.csv  berlin-lor-population-2016-02-t2.csv  berlin-lor-population-2016-02-t3.csv  berlin-lor-population-2016-02-t4.csv
data/berlin-lor-population-2023-01/: berlin-lor-population-2023-01.csv
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
lib/config/: data_transformation_gold_loader.py  data_transformation_silver_loader.py  odps_loader.py
lib/documentation/: odps_canvas_generator.py
lib/extract/: data_extractor.py
lib/load/: data_loader.py
lib/transform/: data_aggregator.py  data_copier.py  data_csv_converter.py
(+64 files in other folders)
